<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_employee_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionNext"
            android:hint="@string/wifinamelimit"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/wifiname"
            android:textSize="18dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_employee_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionNext"
            android:hint="@string/keylimit"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/key"
            android:textSize="18dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_employee_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionNext" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/doorname"
            android:textSize="18dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_wifi_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/passimit"
            android:imeOptions="actionNext" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionNext">

            <SeekBar
                android:id="@+id/seek_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_seek_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="text"
                android:layout_below="@+id/seek_time"
                android:layout_marginLeft="20dp"/>


        </RelativeLayout>


        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="18dp" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressWIFIsetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#ffffffff"
            android:textSize="18dp"
            android:background="@drawable/shape"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/taeed"
            android:textColor="#ffffffff"
            android:textSize="18dp"
            android:background="@drawable/shape"/>

    </LinearLayout>

</LinearLayout>